update application version ignore stat events of bots if they are ignored limit max number of bot profiles to 18, greater than 18 wraps prevent anti cheat from running on bot events create localization folder on publish so copying over doesn't fail include quick message mapping on webfront server history chat make gravatar on profile not repeat

--- a/WebfrontCore/wwwroot/css/profile.css
+++ b/WebfrontCore/wwwroot/css/profile.css
@@ -153,6 +153,8 @@
     min-width: 8rem;
     min-height: 8rem;
     background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .profile-shortcode {
